# lumina-MVP

./: .env-e  .env.example  .env.test  .gitignore  .prettierrc  AI_Consulting_Tool_O1_Brief.md  README.md  app.yaml  components.json  deploy.sh  drizzle.config.ts  eslint.js  jest.config.js  next.config.js  package-lock.json  package.json  start-database.sh
Docs/: Complex_Scenario_Example.md  Implementation_Status.md  Project_Status_Report.md  Standard_Operating_Procedure.md  (+1 more)
lumina-backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
lumina-backend/alembic/: env.py
lumina-backend/alembic/versions/: b7f223563c98_update_schema.py  f4c94de78820_create_consulting_models.py  xxxx_add_literature_review_table.py
lumina-backend/app/: main.py
lumina-backend/app/ai/: context_manager.py  deploy_config.py  model_factory.py  multi_step_engine.py
lumina-backend/app/api/: api.py  consulting.py  deps.py
lumina-backend/app/api/endpoints/: literature_review.py  problem.py
lumina-backend/app/auth/: auth.py
lumina-backend/app/core/: config.py  security.py
lumina-backend/app/crud/: literature_review.py
lumina-backend/app/db/: base.py
lumina-backend/app/models/: consulting.py
lumina-backend/app/schemas/: __init__.py  analysis.py  consulting.py  literature_review.py  problem.py
lumina-backend/app/visualization/: interactive_graph.py
lumina-backend/src/lumina_backend/: __init__.py
lumina-backend/tests/: conftest.py  test_api.py  test_consulting_workflow.py  test_db.py  test_literature_review_api.py  test_multi_step_engine.py
(+92 files in other folders)
